[project]
name = "AdventOfCode"
version = "0.1.0"
requires-python = ">=3.14"
authors = [{ name = "Dmitry Volodin", email = "mr.molkree@gmail.com" }]
readme = "README.md"


[dependency-groups]
dev = [
    "black==26.3.1",
    "flake8==7.3.0",
    "isort==8.0.1",
    "mypy==1.20.2",
    "pep8-naming==0.15.1",
    "prek==0.3.11",
]
