[project]
name = "AdventOfCode"
version = "0.1.0"
requires-python = ">=3.14"
authors = [{ name = "Dmitry Volodin", email = "mr.molkree@gmail.com" }]
readme = "README.md"


[dependency-groups]
build = ["uv==0.11.25"]
dev = [
    "black==26.5.1",
    "flake8==7.3.0",
    "isort==8.0.1",
    "mypy==2.1.0",
    "pep8-naming==0.15.1",
    "prek==0.4.6",
]

[tool.uv]
exclude-newer = "1 week"
